<resources>
    <string name="app_name">GadsLeaderBoard</string>
    <string name="submit">Submit</string>
    <string name="leaderboard">LEADERBOARD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="learning_leaders">Learning Leaders</string>
    <string name="skill_iq_leaders">Skill IQ Leaders</string>
    <string name="project_link">Project Link</string>
    <string name="email_address">Email Address</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="submission_failed">Submission Failed</string>
</resources>