<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubmitProjectActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_centerInParent="true"
        android:visibility="gone"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark">

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/toolbar"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="46dp">

            <EditText
                android:id="@+id/et_firstName"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:textColor="@color/colorPrimaryDark"
                android:background="@drawable/input_bg"
                android:textColorHint="@color/colorPrimaryDark"
                android:layout_marginEnd="5dp"/>

            <EditText
                android:id="@+id/et_lastName"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:textColor="@color/colorPrimaryDark"
                android:background="@drawable/input_bg"
                android:layout_marginStart="5dp"
                android:textColorHint="@color/colorPrimaryDark"/>

        </LinearLayout>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/input_bg"
            android:hint="@string/email_address"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"/>

        <EditText
            android:id="@+id/et_projectLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/input_bg"
            android:hint="@string/project_link"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"/>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:paddingVertical="8dp"
            android:background="@drawable/btn_bg"
            android:textStyle="bold"/>
    </LinearLayout>

</RelativeLayout>